[gd_scene load_steps=2 format=3 uid="uid://chma1wtmmudni"]

[ext_resource type="Script" path="res://Scenes/EnemySpawner/enemy_spawner.gd" id="1_clcs6"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_clcs6")

[node name="SpawnDelay" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="HoldingSpots" type="Node" parent="."]

[node name="SpawnSpot" type="Marker2D" parent="."]

[connection signal="timeout" from="SpawnDelay" to="." method="_on_spawn_delay_timeout"]
